# tezos

./: .gitignore  .gitlab-ci.yml  Makefile  shell.nix
.gitlab/ci/: build.yml  packaging.yml  templates.yml  test_coverage.yml
docs/alpha/: event.rst  michelson.rst  proof_of_stake.rst  token_management.rst  transaction_rollups.rst
docs/protocols/: 012_ithaca.rst  013_jakarta.rst  alpha.rst
manifest/: main.ml  manifest.ml  manifest.mli
scripts/: update_opam_repo.sh  version.sh
src/bin_snoop/: cmdline.ml  commands.ml  display.ml  display.mli  dune  main_snoop.ml  report.ml  tezos-snoop.opam
src/lib_benchmark/: benchmark_helpers.ml  codegen.ml  dune  inference.ml  maths.ml  measure.ml  model.ml  override.ml  scikit.ml  scikit_matrix.ml  snoop_stubs.c  tezos-benchmark.opam
src/lib_context/: dune  tezos-context.opam  tezos_context.ml  tezos_context.mli
src/lib_mockup_proxy/: RPC_client.ml
src/lib_protocol_compiler/: compiler.ml  dune  dune_protocol.template.v0  dune_protocol.template.v1  dune_protocol.template.v2  tezos-protocol-compiler.opam
src/lib_protocol_environment/: proxy_context.ml
src/lib_rpc_http/: RPC_middleware.ml  RPC_middleware.mli  RPC_server.ml  RPC_server.mli  dune
src/lib_scoru_wasm/: dune  tezos-scoru-wasm.opam
src/lib_shell_benchmarks/: dune  io_stats.ml  tezos-shell-benchmarks.opam
src/lib_time_measurement/: dune-project  tezos-time-measurement.opam
src/tooling/: tezos-tooling.opam
tezt/_regressions/: run_views.out  sc_rollup_get_lcc_hash_and_level.out
tezt/lib/: log.ml
vendors/webassembly-spec/interpreter/: dune
(+617 files in other folders)
